samples/_failures_safe/1761627919_72c756_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37caf85c.c: In function ‘main’:
./samples/SAFE/__tmp_37caf85c.c:145:26: error: missing terminating ' character
  145 |         input[len - 1] = '\0
      |                          ^~~
./samples/SAFE/__tmp_37caf85c.c:145:9: error: expected expression at end of input
  145 |         input[len - 1] = '\0
      |         ^~~~~
./samples/SAFE/__tmp_37caf85c.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37caf85c.c:145:9: error: expected declaration or statement at end of input
